Added integration test for search api